--- a/Statiq.SampleSite.csproj
+++ b/Statiq.SampleSite.csproj
@@ -1,14 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+    <PropertyGroup>
+        <OutputType>Exe</OutputType>
+        <TargetFramework>net6.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Statiq.Web" Version="1.0.0-beta.58" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Markdig" Version="0.37.0" />
+        <PackageReference Include="Markdig.SyntaxHighlighting" Version="1.1.7" />
+        <PackageReference Include="Statiq.Web" Version="1.0.0-beta.58" />
+    </ItemGroup>
 
 </Project>
