--- a/Statiq.SampleSite.csproj
+++ b/Statiq.SampleSite.csproj
@@ -9,8 +9,8 @@
 
     <ItemGroup>
         <PackageReference Include="Markdig" Version="0.37.0" />
-        <PackageReference Include="Markdig.SyntaxHighlighting" Version="1.1.7" />
         <PackageReference Include="Statiq.Web" Version="1.0.0-beta.58" />
+        <PackageReference Include="WebStoating.Markdig.Prism" Version="1.0.0" />
     </ItemGroup>
 
 </Project>
